accelerated-domains: add dzxsw.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27522,6 +27522,7 @@ server=/dzwork.net/114.114.114.114
 server=/dzwww.com/114.114.114.114
 server=/dzwww.net/114.114.114.114
 server=/dzwy.com/114.114.114.114
+server=/dzxsw.net/114.114.114.114
 server=/dzxw.net/114.114.114.114
 server=/dzxwnews.com/114.114.114.114
 server=/dzxxzy.com/114.114.114.114
