accelerated-domains: add eq321.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28795,6 +28795,7 @@ server=/epwitkey.com/114.114.114.114
 server=/epwk.com/114.114.114.114
 server=/epxlt.xyz/114.114.114.114
 server=/epzcw.com/114.114.114.114
+server=/eq321.com/114.114.114.114
 server=/eqding.com/114.114.114.114
 server=/eqh5.com/114.114.114.114
 server=/eqidi.com/114.114.114.114
