accelerated-domains: add fqxsw.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31246,6 +31246,7 @@ server=/fqpai.com/114.114.114.114
 server=/fqworld.org/114.114.114.114
 server=/fqxdw.com/114.114.114.114
 server=/fqxs.org/114.114.114.114
+server=/fqxsw.cc/114.114.114.114
 server=/fr-trading.com/114.114.114.114
 server=/fr2007.com/114.114.114.114
 server=/fractal-technology.com/114.114.114.114
