--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31268,6 +31268,7 @@ server=/free-api.com/114.114.114.114
 server=/free-e.net/114.114.114.114
 server=/free-img.com/114.114.114.114
 server=/free8.net/114.114.114.114
+server=/free97.net/114.114.114.114
 server=/freebuf.com/114.114.114.114
 server=/freebuy.top/114.114.114.114
 server=/freebz.net/114.114.114.114
