--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33697,6 +33697,7 @@ server=/gm86.com/114.114.114.114
 server=/gm88.com/114.114.114.114
 server=/gm99game.net/114.114.114.114
 server=/gmacsaic.com/114.114.114.114
+server=/gmallbio.com/114.114.114.114
 server=/gmanhua.com/114.114.114.114
 server=/gmatg.com/114.114.114.114
 server=/gmcc.net/114.114.114.114
