accelerated-domains: add guaili.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34638,6 +34638,7 @@ server=/guahaowang.com/114.114.114.114
 server=/guaiguai.com/114.114.114.114
 server=/guaihou.com/114.114.114.114
 server=/guaileicp.com/114.114.114.114
+server=/guaili.org/114.114.114.114
 server=/guailuo.com/114.114.114.114
 server=/guailuzi.com/114.114.114.114
 server=/guaini.blog/114.114.114.114
