--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38422,6 +38422,7 @@ server=/haohanguo.com/114.114.114.114
 server=/haohanju.com/114.114.114.114
 server=/haohanjx.com/114.114.114.114
 server=/haohanpower.tech/114.114.114.114
+server=/haohaomao.com/114.114.114.114
 server=/haohaomy.com/114.114.114.114
 server=/haohaotuan.com/114.114.114.114
 server=/haohaowan.com/114.114.114.114
