--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38726,6 +38726,7 @@ server=/hawbel.com/114.114.114.114
 server=/hawkeye.fun/114.114.114.114
 server=/hawkhai.com/114.114.114.114
 server=/haxdjx.com/114.114.114.114
+server=/haxwx.cc/114.114.114.114
 server=/hayeen.com/114.114.114.114
 server=/hayge.com/114.114.114.114
 server=/haygo.com/114.114.114.114
