--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43428,6 +43428,7 @@ server=/hzyidc.com/114.114.114.114
 server=/hzylpco.com/114.114.114.114
 server=/hzyn888.com/114.114.114.114
 server=/hzyoka.com/114.114.114.114
+server=/hzyoumai.com/114.114.114.114
 server=/hzyoushu.com/114.114.114.114
 server=/hzyqys.com/114.114.114.114
 server=/hzyuedu.com/114.114.114.114
