accelerated-domains: add ixuanquge.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46117,6 +46117,7 @@ server=/ixpub.net/114.114.114.114
 server=/ixs.la/114.114.114.114
 server=/ixsch.com/114.114.114.114
 server=/ixsz.com/114.114.114.114
+server=/ixuanquge.com/114.114.114.114
 server=/ixuanshu.net/114.114.114.114
 server=/ixuenong.com/114.114.114.114
 server=/ixueshu.com/114.114.114.114
