--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48717,6 +48717,7 @@ server=/jocund-gift.com/114.114.114.114
 server=/joe92.com/114.114.114.114
 server=/joessem.com/114.114.114.114
 server=/joey-rose.com/114.114.114.114
+server=/jogjamedianet.com/114.114.114.114
 server=/johhan.com/114.114.114.114
 server=/johnlz.com/114.114.114.114
 server=/johnmedia.com/114.114.114.114
