accelerated-domains: add jusen2008.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49624,6 +49624,7 @@ server=/juroku.net/114.114.114.114
 server=/jurongfangchan.com/114.114.114.114
 server=/jurongrencai.com/114.114.114.114
 server=/juseey.com/114.114.114.114
+server=/jusen2008.com/114.114.114.114
 server=/jusha.com/114.114.114.114
 server=/jushequan.com/114.114.114.114
 server=/jushewang.com/114.114.114.114
