accelerated-domains: add kankan.today

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50429,6 +50429,7 @@ server=/kanjianxinli.com/114.114.114.114
 server=/kanjuba1.com/114.114.114.114
 server=/kankan.com/114.114.114.114
 server=/kankan.run/114.114.114.114
+server=/kankan.today/114.114.114.114
 server=/kankan365.cc/114.114.114.114
 server=/kankancity.com/114.114.114.114
 server=/kankanews.com/114.114.114.114
