accelerated-domains: add kanshu.la

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50466,6 +50466,7 @@ server=/kansea.com/114.114.114.114
 server=/kanshangjie.com/114.114.114.114
 server=/kanshijie.cc/114.114.114.114
 server=/kanshu.com/114.114.114.114
+server=/kanshu.la/114.114.114.114
 server=/kanshu5.net/114.114.114.114
 server=/kanshuge.com/114.114.114.114
 server=/kanshuhai.com/114.114.114.114
