accelerated-domains: add kanshu58.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50464,6 +50464,7 @@ server=/kanshijie.cc/114.114.114.114
 server=/kanshu.com/114.114.114.114
 server=/kanshu.la/114.114.114.114
 server=/kanshu5.net/114.114.114.114
+server=/kanshu58.cc/114.114.114.114
 server=/kanshuge.com/114.114.114.114
 server=/kanshuhai.com/114.114.114.114
 server=/kanshushi.com/114.114.114.114
