--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52095,6 +52095,7 @@ server=/kuwwz.com/114.114.114.114
 server=/kuxi100.com/114.114.114.114
 server=/kuxiaoji.com/114.114.114.114
 server=/kuxiaomiao.com/114.114.114.114
+server=/kuxiaoshuo.com/114.114.114.114
 server=/kuxiaotu.com/114.114.114.114
 server=/kuxiaozhu.com/114.114.114.114
 server=/kuxiuktv.com/114.114.114.114
