--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52441,6 +52441,7 @@ server=/lamall.com/114.114.114.114
 server=/lamaqun.com/114.114.114.114
 server=/lambda.hk/114.114.114.114
 server=/lamborlogistics.com/114.114.114.114
+server=/lameixs.com/114.114.114.114
 server=/lamiu.com/114.114.114.114
 server=/lamost.org/114.114.114.114
 server=/lamoton.com/114.114.114.114
