accelerated-domains: add lewenss.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53485,6 +53485,7 @@ server=/lewenba.cc/114.114.114.114
 server=/lewenlou.la/114.114.114.114
 server=/lewenn.com/114.114.114.114
 server=/lewenqu.com/114.114.114.114
+server=/lewenss.com/114.114.114.114
 server=/lewenxsw.com/114.114.114.114
 server=/lewifi.com/114.114.114.114
 server=/lex.download.prss.microsoft.com/114.114.114.114
