accelerated-domains: add lieshuku.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53893,6 +53893,7 @@ server=/liepincc.com/114.114.114.114
 server=/lierda.com/114.114.114.114
 server=/lierfang.com/114.114.114.114
 server=/liermusic.com/114.114.114.114
+server=/lieshuku.com/114.114.114.114
 server=/lietou-edm.com/114.114.114.114
 server=/lietou-static.com/114.114.114.114
 server=/lietou.com/114.114.114.114
