--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57562,6 +57562,7 @@ server=/meituan.net/114.114.114.114
 server=/meitubase.com/114.114.114.114
 server=/meitubeauty.com/114.114.114.114
 server=/meitubf.com/114.114.114.114
+server=/meitubox.com/114.114.114.114
 server=/meitudashi.com/114.114.114.114
 server=/meitudata.com/114.114.114.114
 server=/meitufamily.com/114.114.114.114
