accelerated-domains: add meitucam.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57563,6 +57563,7 @@ server=/meitubase.com/114.114.114.114
 server=/meitubeauty.com/114.114.114.114
 server=/meitubf.com/114.114.114.114
 server=/meitubox.com/114.114.114.114
+server=/meitucam.com/114.114.114.114
 server=/meitudashi.com/114.114.114.114
 server=/meitudata.com/114.114.114.114
 server=/meitufamily.com/114.114.114.114
