--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57559,6 +57559,7 @@ server=/meitubeauty.com/114.114.114.114
 server=/meitubf.com/114.114.114.114
 server=/meitubox.com/114.114.114.114
 server=/meitucam.com/114.114.114.114
+server=/meitucamera.com/114.114.114.114
 server=/meitudashi.com/114.114.114.114
 server=/meitudata.com/114.114.114.114
 server=/meitufamily.com/114.114.114.114
