accelerated-domains: add meitucoffee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57560,6 +57560,7 @@ server=/meitubf.com/114.114.114.114
 server=/meitubox.com/114.114.114.114
 server=/meitucam.com/114.114.114.114
 server=/meitucamera.com/114.114.114.114
+server=/meitucoffee.com/114.114.114.114
 server=/meitudashi.com/114.114.114.114
 server=/meitudata.com/114.114.114.114
 server=/meitufamily.com/114.114.114.114
