accelerated-domains: add meituduoduo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57568,6 +57568,7 @@ server=/meitucamera.com/114.114.114.114
 server=/meitucoffee.com/114.114.114.114
 server=/meitudashi.com/114.114.114.114
 server=/meitudata.com/114.114.114.114
+server=/meituduoduo.com/114.114.114.114
 server=/meitufamily.com/114.114.114.114
 server=/meitugif.com/114.114.114.114
 server=/meituhezi.com/114.114.114.114
