accelerated-domains: add meitufans.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57565,6 +57565,7 @@ server=/meitudashi.com/114.114.114.114
 server=/meitudata.com/114.114.114.114
 server=/meituduoduo.com/114.114.114.114
 server=/meitufamily.com/114.114.114.114
+server=/meitufans.com/114.114.114.114
 server=/meitugif.com/114.114.114.114
 server=/meituhezi.com/114.114.114.114
 server=/meituhuahua.com/114.114.114.114
