--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57574,6 +57574,7 @@ server=/meitufans.com/114.114.114.114
 server=/meitugif.com/114.114.114.114
 server=/meituhezi.com/114.114.114.114
 server=/meituhuahua.com/114.114.114.114
+server=/meituinside.com/114.114.114.114
 server=/meitukiss.com/114.114.114.114
 server=/meitumail.com/114.114.114.114
 server=/meitumobile.com/114.114.114.114
