--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57575,6 +57575,7 @@ server=/meitugif.com/114.114.114.114
 server=/meituhezi.com/114.114.114.114
 server=/meituhuahua.com/114.114.114.114
 server=/meituinside.com/114.114.114.114
+server=/meitukankan.com/114.114.114.114
 server=/meitukiss.com/114.114.114.114
 server=/meitumail.com/114.114.114.114
 server=/meitumobile.com/114.114.114.114
