accelerated-domains: add meitumob.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57578,6 +57578,7 @@ server=/meituinside.com/114.114.114.114
 server=/meitukankan.com/114.114.114.114
 server=/meitukiss.com/114.114.114.114
 server=/meitumail.com/114.114.114.114
+server=/meitumob.com/114.114.114.114
 server=/meitumobile.com/114.114.114.114
 server=/meitumv.com/114.114.114.114
 server=/meitun.com/114.114.114.114
