--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57580,6 +57580,7 @@ server=/meitun.com/114.114.114.114
 server=/meituncdn.com/114.114.114.114
 server=/meitupaipai.com/114.114.114.114
 server=/meitupic.com/114.114.114.114
+server=/meitupingzi.com/114.114.114.114
 server=/meiturom.com/114.114.114.114
 server=/meitushop.com/114.114.114.114
 server=/meitusnap.com/114.114.114.114
