--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57581,6 +57581,7 @@ server=/meituncdn.com/114.114.114.114
 server=/meitupaipai.com/114.114.114.114
 server=/meitupic.com/114.114.114.114
 server=/meitupingzi.com/114.114.114.114
+server=/meituriji.com/114.114.114.114
 server=/meiturom.com/114.114.114.114
 server=/meitushop.com/114.114.114.114
 server=/meitusnap.com/114.114.114.114
