accelerated-domains: add meitushouji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57589,6 +57589,7 @@ server=/meitupingzi.com/114.114.114.114
 server=/meituriji.com/114.114.114.114
 server=/meiturom.com/114.114.114.114
 server=/meitushop.com/114.114.114.114
+server=/meitushouji.com/114.114.114.114
 server=/meitusnap.com/114.114.114.114
 server=/meitustat.com/114.114.114.114
 server=/meitustatic.com/114.114.114.114
