--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57594,6 +57594,7 @@ server=/meitusnap.com/114.114.114.114
 server=/meitustat.com/114.114.114.114
 server=/meitustatic.com/114.114.114.114
 server=/meitustore.com/114.114.114.114
+server=/meitutaotao.com/114.114.114.114
 server=/meitutietie.com/114.114.114.114
 server=/meituxiangji.com/114.114.114.114
 server=/meituxiaopu.com/114.114.114.114
