--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57590,6 +57590,7 @@ server=/meitustat.com/114.114.114.114
 server=/meitustatic.com/114.114.114.114
 server=/meitustore.com/114.114.114.114
 server=/meitutaotao.com/114.114.114.114
+server=/meitutg.com/114.114.114.114
 server=/meitutietie.com/114.114.114.114
 server=/meituxiangji.com/114.114.114.114
 server=/meituxiaopu.com/114.114.114.114
