--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57601,6 +57601,7 @@ server=/meituxiangji.com/114.114.114.114
 server=/meituxiaopu.com/114.114.114.114
 server=/meituxiu.com/114.114.114.114
 server=/meituxiuxiu.com/114.114.114.114
+server=/meituyidong.com/114.114.114.114
 server=/meituyun.com/114.114.114.114
 server=/meiwafuying.com/114.114.114.114
 server=/meiwanshop.com/114.114.114.114
