--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57673,6 +57673,7 @@ server=/meng3.com/114.114.114.114
 server=/meng800.com/114.114.114.114
 server=/mengaite.com/114.114.114.114
 server=/mengat.com/114.114.114.114
+server=/mengbige.com/114.114.114.114
 server=/mengchenghui.com/114.114.114.114
 server=/mengchongzu.com/114.114.114.114
 server=/mengdian.com/114.114.114.114
