--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57915,6 +57915,7 @@ server=/mhpdf.com/114.114.114.114
 server=/mhpin.com/114.114.114.114
 server=/mhrooz.xyz/114.114.114.114
 server=/mht.la/114.114.114.114
+server=/mht.tw/114.114.114.114
 server=/mhtclub.com/114.114.114.114
 server=/mhtes.com/114.114.114.114
 server=/mhtyd.com/114.114.114.114
