--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58155,6 +58155,7 @@ server=/mihayou.com/114.114.114.114
 server=/mihopacking.com/114.114.114.114
 server=/mihoyo.com/114.114.114.114
 server=/mihoyocg.com/114.114.114.114
+server=/mihoyocloud.com/114.114.114.114
 server=/mihoyogift.com/114.114.114.114
 server=/mihoyomall.com/114.114.114.114
 server=/mihua.net/114.114.114.114
