accelerated-domains: add mituyuedu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58522,6 +58522,7 @@ server=/mitstore.net/114.114.114.114
 server=/mitsuha.space/114.114.114.114
 server=/mittrchina.com/114.114.114.114
 server=/mituancm.com/114.114.114.114
+server=/mituyuedu.com/114.114.114.114
 server=/mitvos.com/114.114.114.114
 server=/mitvos.net/114.114.114.114
 server=/miued.com/114.114.114.114
