--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61028,6 +61028,7 @@ server=/nicetuan.net/114.114.114.114
 server=/nicewatch.cc/114.114.114.114
 server=/niceyea.com/114.114.114.114
 server=/nichuanbo.com/114.114.114.114
+server=/nickbussok.com/114.114.114.114
 server=/nicksxs.com/114.114.114.114
 server=/nicky1605.com/114.114.114.114
 server=/nicolaszhao.com/114.114.114.114
