--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63847,6 +63847,7 @@ server=/paopaoche.net/114.114.114.114
 server=/paopaohd.com/114.114.114.114
 server=/paopaosz.com/114.114.114.114
 server=/paopaozd.com/114.114.114.114
+server=/paoshuba.cc/114.114.114.114
 server=/paoxq.com/114.114.114.114
 server=/papa21.com/114.114.114.114
 server=/papa91.com/114.114.114.114
