accelerated-domains: add paoshuba.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63843,6 +63843,7 @@ server=/paopaohd.com/114.114.114.114
 server=/paopaosz.com/114.114.114.114
 server=/paopaozd.com/114.114.114.114
 server=/paoshuba.cc/114.114.114.114
+server=/paoshuba.org/114.114.114.114
 server=/paoxq.com/114.114.114.114
 server=/papa21.com/114.114.114.114
 server=/papa91.com/114.114.114.114
