accelerated-domains: add qbiqu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65750,6 +65750,7 @@ server=/qbgxl.com/114.114.114.114
 server=/qbhmz3.com/114.114.114.114
 server=/qbide.com/114.114.114.114
 server=/qbihui.com/114.114.114.114
+server=/qbiqu.com/114.114.114.114
 server=/qbitai.com/114.114.114.114
 server=/qbj.cc/114.114.114.114
 server=/qbjrxs.com/114.114.114.114
