accelerated-domains: add qingdou.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66554,6 +66554,7 @@ server=/qingdaoshenghao.com/114.114.114.114
 server=/qingdaoticai.com/114.114.114.114
 server=/qingdelan.com/114.114.114.114
 server=/qingdou.ltd/114.114.114.114
+server=/qingdou.net/114.114.114.114
 server=/qinger.name/114.114.114.114
 server=/qingf001.com/114.114.114.114
 server=/qingfanqie.com/114.114.114.114
