--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66786,6 +66786,7 @@ server=/qishuta.net/114.114.114.114
 server=/qishuta.org/114.114.114.114
 server=/qisi.co/114.114.114.114
 server=/qisool.com/114.114.114.114
+server=/qisuu.la/114.114.114.114
 server=/qisuya.com/114.114.114.114
 server=/qita.love/114.114.114.114
 server=/qitaijiuye.com/114.114.114.114
