--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67914,6 +67914,7 @@ server=/qvlz.com/114.114.114.114
 server=/qvpublish.com/114.114.114.114
 server=/qvxtzi.xyz/114.114.114.114
 server=/qvxz.com/114.114.114.114
+server=/qvyue.com/114.114.114.114
 server=/qw5599.com/114.114.114.114
 server=/qwbk.cc/114.114.114.114
 server=/qwe1e.com/114.114.114.114
