accelerated-domains: add remenxs.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68613,6 +68613,7 @@ server=/rely87779777.com/114.114.114.114
 server=/remaijie.net/114.114.114.114
 server=/remapcity.com/114.114.114.114
 server=/remax-bj.com/114.114.114.114
+server=/remenxs.cc/114.114.114.114
 server=/remixai.com/114.114.114.114
 server=/remo-ai.com/114.114.114.114
 server=/remodelife.com/114.114.114.114
