accelerated-domains: add resouxs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68742,6 +68742,7 @@ server=/residenzavillafiorita.com/114.114.114.114
 server=/resistor.today/114.114.114.114
 server=/resnics.com/114.114.114.114
 server=/resnowshop.com/114.114.114.114
+server=/resouxs.com/114.114.114.114
 server=/resowolf.com/114.114.114.114
 server=/respect-lab.com/114.114.114.114
 server=/respondaudio.com/114.114.114.114
