--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69474,6 +69474,7 @@ server=/ruikesearch.com/114.114.114.114
 server=/ruilinblw.com/114.114.114.114
 server=/ruimofang.com/114.114.114.114
 server=/ruiniucn.com/114.114.114.114
+server=/ruipai.com/114.114.114.114
 server=/ruipengkeji.com/114.114.114.114
 server=/ruiscz.com/114.114.114.114
 server=/ruishengseal.com/114.114.114.114
