accelerated-domains: add sanjiuxs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69945,6 +69945,7 @@ server=/sanjieke.com/114.114.114.114
 server=/sanjiexc.com/114.114.114.114
 server=/sanjinjiake.com/114.114.114.114
 server=/sanjiusk.net/114.114.114.114
+server=/sanjiuxs.com/114.114.114.114
 server=/sanjun.com/114.114.114.114
 server=/sankengriji.com/114.114.114.114
 server=/sankgo.com/114.114.114.114
