--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70958,6 +70958,7 @@ server=/sejianghu.com/114.114.114.114
 server=/sekede.net/114.114.114.114
 server=/sekorm.com/114.114.114.114
 server=/selboo.com/114.114.114.114
+server=/selfiecity.com/114.114.114.114
 server=/selfservicechina.com/114.114.114.114
 server=/selinuxplus.com/114.114.114.114
 server=/sell66.com/114.114.114.114
