accelerated-domains: add sepahbourse.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71065,6 +71065,7 @@ server=/seowhy.com/114.114.114.114
 server=/seoxuetang.com/114.114.114.114
 server=/sep.cc/114.114.114.114
 server=/sepact.com/114.114.114.114
+server=/sepahbourse.com/114.114.114.114
 server=/septinn.com/114.114.114.114
 server=/septwolves.com/114.114.114.114
 server=/sepu.net/114.114.114.114
