accelerated-domains: add shukuai.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72808,6 +72808,7 @@ server=/shukingfashion.com/114.114.114.114
 server=/shukoe.com/114.114.114.114
 server=/shukongwang.com/114.114.114.114
 server=/shukuai.com/114.114.114.114
+server=/shukuai.net/114.114.114.114
 server=/shukuai3.com/114.114.114.114
 server=/shukuge.com/114.114.114.114
 server=/shukwai.com/114.114.114.114
