accelerated-domains: add shukw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72811,6 +72811,7 @@ server=/shukuai.com/114.114.114.114
 server=/shukuai.net/114.114.114.114
 server=/shukuai3.com/114.114.114.114
 server=/shukuge.com/114.114.114.114
+server=/shukw.com/114.114.114.114
 server=/shukwai.com/114.114.114.114
 server=/shulanapp.com/114.114.114.114
 server=/shulb.com/114.114.114.114
