--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76767,6 +76767,7 @@ server=/taijudaquan.com/114.114.114.114
 server=/taijutv.com/114.114.114.114
 server=/taikancnc.com/114.114.114.114
 server=/taikang.com/114.114.114.114
+server=/taikang.网址/114.114.114.114
 server=/taikang100.com/114.114.114.114
 server=/taikanginv.com/114.114.114.114
 server=/taikangjsnc.com/114.114.114.114
