--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78332,6 +78332,7 @@ server=/tinfinite.com/114.114.114.114
 server=/tinfo.com/114.114.114.114
 server=/ting22.com/114.114.114.114
 server=/ting55.com/114.114.114.114
+server=/ting89.com/114.114.114.114
 server=/tingbook.com/114.114.114.114
 server=/tingchewei.net/114.114.114.114
 server=/tingchina.com/114.114.114.114
