accelerated-domains: add titixs.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78411,6 +78411,7 @@ server=/titanmatrix.com/114.114.114.114
 server=/titapark.com/114.114.114.114
 server=/titianshanfz.com/114.114.114.114
 server=/tititxt.com/114.114.114.114
+server=/titixs.cc/114.114.114.114
 server=/title-cn.com/114.114.114.114
 server=/titussb.com/114.114.114.114
 server=/tivitv.com/114.114.114.114
