--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78645,6 +78645,7 @@ server=/tmcdn.net/114.114.114.114
 server=/tmctool.com/114.114.114.114
 server=/tmeiju.com/114.114.114.114
 server=/tmeissheng.com/114.114.114.114
+server=/tmetb.net/114.114.114.114
 server=/tmhkgs.com/114.114.114.114
 server=/tmhong.com/114.114.114.114
 server=/tmhttc.com/114.114.114.114
