--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80085,6 +80085,7 @@ server=/txsdk.com/114.114.114.114
 server=/txsf.com/114.114.114.114
 server=/txssw.com/114.114.114.114
 server=/txstatic.com/114.114.114.114
+server=/txt101.com/114.114.114.114
 server=/txt321.com/114.114.114.114
 server=/txt81.com/114.114.114.114
 server=/txtanghu.com/114.114.114.114
