accelerated-domains: add txtshu365.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80099,6 +80099,7 @@ server=/txt81.com/114.114.114.114
 server=/txtanghu.com/114.114.114.114
 server=/txtbbs.com/114.114.114.114
 server=/txtduo.com/114.114.114.114
+server=/txtshu365.net/114.114.114.114
 server=/txtshuku.org/114.114.114.114
 server=/txttool.com/114.114.114.114
 server=/txtxr.com/114.114.114.114
