accelerated-domains: add uuxs.la

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81191,6 +81191,7 @@ server=/uuwtq.com/114.114.114.114
 server=/uuwx.la/114.114.114.114
 server=/uuxn.com/114.114.114.114
 server=/uuxs.info/114.114.114.114
+server=/uuxs.la/114.114.114.114
 server=/uuxs.tw/114.114.114.114
 server=/uuyoyo.com/114.114.114.114
 server=/uuysiaq.com/114.114.114.114
