accelerated-domains: add wanshuge.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82854,6 +82854,7 @@ server=/wanshifuapp.com/114.114.114.114
 server=/wanshitong.com/114.114.114.114
 server=/wanshouyou.net/114.114.114.114
 server=/wanshu.com/114.114.114.114
+server=/wanshuge.cc/114.114.114.114
 server=/wanshuiqing.com/114.114.114.114
 server=/wanshuyun.com/114.114.114.114
 server=/wansongpu.com/114.114.114.114
