accelerated-domains: add washuw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82944,6 +82944,7 @@ server=/wasdj.com/114.114.114.114
 server=/wasee.com/114.114.114.114
 server=/washpayer.com/114.114.114.114
 server=/washun.com/114.114.114.114
+server=/washuw.com/114.114.114.114
 server=/wasintek.com/114.114.114.114
 server=/wasoinfo.com/114.114.114.114
 server=/wasu.com/114.114.114.114
