--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85125,6 +85125,7 @@ server=/worlduc.com/114.114.114.114
 server=/worldwarner.com/114.114.114.114
 server=/worldwayhk.com/114.114.114.114
 server=/worldwu.com/114.114.114.114
+server=/wormsculptor.com/114.114.114.114
 server=/wort.cloud/114.114.114.114
 server=/worthtech.net/114.114.114.114
 server=/worthy.cc/114.114.114.114
