--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85590,6 +85590,7 @@ server=/wukongshuo.com/114.114.114.114
 server=/wukongtj.com/114.114.114.114
 server=/wukongwatch.com/114.114.114.114
 server=/wukongwenda.com/114.114.114.114
+server=/wukongzhuishu.com/114.114.114.114
 server=/wukur.com/114.114.114.114
 server=/wukypay.com/114.114.114.114
 server=/wul.ai/114.114.114.114
