--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87382,6 +87382,7 @@ server=/xiaoshuo1-sm.com/114.114.114.114
 server=/xiaoshuo2-sm.com/114.114.114.114
 server=/xiaoshuo520.com/114.114.114.114
 server=/xiaoshuo570.com/114.114.114.114
+server=/xiaoshuob.com/114.114.114.114
 server=/xiaoshuoba.com/114.114.114.114
 server=/xiaoshuobi.cc/114.114.114.114
 server=/xiaoshuodaquan.com/114.114.114.114
