accelerated-domains: add xieyixs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87631,6 +87631,7 @@ server=/xiexinbao.com/114.114.114.114
 server=/xiexingcun.com/114.114.114.114
 server=/xieyangzhe.com/114.114.114.114
 server=/xieyimao.com/114.114.114.114
+server=/xieyixs.com/114.114.114.114
 server=/xiezewen.com/114.114.114.114
 server=/xiezhizhe.com/114.114.114.114
 server=/xiezhua.com/114.114.114.114
