--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89269,6 +89269,7 @@ server=/xshntc.com/114.114.114.114
 server=/xshouyou.com/114.114.114.114
 server=/xshrcw.com/114.114.114.114
 server=/xshuai.com/114.114.114.114
+server=/xshubao.org/114.114.114.114
 server=/xshuju.com/114.114.114.114
 server=/xshuma.com/114.114.114.114
 server=/xshuoba.com/114.114.114.114
