accelerated-domains: add yidian-inc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91393,6 +91393,7 @@ server=/yide.com/114.114.114.114
 server=/yideamobile.com/114.114.114.114
 server=/yidejia.com/114.114.114.114
 server=/yidengxuetang.com/114.114.114.114
+server=/yidian-inc.com/114.114.114.114
 server=/yidian360.com/114.114.114.114
 server=/yidianchina.com/114.114.114.114
 server=/yidianda.com/114.114.114.114
