accelerated-domains: add yqxsy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93265,6 +93265,7 @@ server=/yqxs.cc/114.114.114.114
 server=/yqxs.xyz/114.114.114.114
 server=/yqxsg.cc/114.114.114.114
 server=/yqxsge.cc/114.114.114.114
+server=/yqxsy.com/114.114.114.114
 server=/yqxxjy.com/114.114.114.114
 server=/yqy021.com/114.114.114.114
 server=/yqyu.com/114.114.114.114
