--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94165,6 +94165,7 @@ server=/yunxinvcloud.com/114.114.114.114
 server=/yunxinvideo.com/114.114.114.114
 server=/yunxiren.com/114.114.114.114
 server=/yunxiu.com/114.114.114.114
+server=/yunxs.com/114.114.114.114
 server=/yunxuetang.com/114.114.114.114
 server=/yunxunmedia.com/114.114.114.114
 server=/yunyanit.com/114.114.114.114
