--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94790,6 +94790,7 @@ server=/z12345.com/114.114.114.114
 server=/z17.link/114.114.114.114
 server=/z1987.com/114.114.114.114
 server=/z1cdn.com/114.114.114.114
+server=/z211.vip/114.114.114.114
 server=/z28j.com/114.114.114.114
 server=/z2ehospital.com/114.114.114.114
 server=/z2sci.com/114.114.114.114
