accelerated-domains: add zaidu.la

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94821,6 +94821,7 @@ server=/zahuoji.com/114.114.114.114
 server=/zai-art.com/114.114.114.114
 server=/zai-xian.com/114.114.114.114
 server=/zaibaoan.com/114.114.114.114
+server=/zaidu.la/114.114.114.114
 server=/zaiduu.com/114.114.114.114
 server=/zaiemei.com/114.114.114.114
 server=/zaifan.com/114.114.114.114
