--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94952,6 +94952,7 @@ server=/zbieo.com/114.114.114.114
 server=/zbii.com/114.114.114.114
 server=/zbinfo.net/114.114.114.114
 server=/zbintel.com/114.114.114.114
+server=/zbiquge.com/114.114.114.114
 server=/zbird.com/114.114.114.114
 server=/zbisq.com/114.114.114.114
 server=/zbitcloud.com/114.114.114.114
