--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98816,6 +98816,7 @@ server=/zzthjixie.com/114.114.114.114
 server=/zztline.com/114.114.114.114
 server=/zztvzd.com/114.114.114.114
 server=/zztxkj.com/114.114.114.114
+server=/zztxt.net/114.114.114.114
 server=/zztyscl.com/114.114.114.114
 server=/zzun777.com/114.114.114.114
 server=/zzvips.com/114.114.114.114
