accelerated-domains: add dddstew6cw8.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24488,6 +24488,7 @@ server=/dddholdings.com/114.114.114.114
 server=/dddja.com/114.114.114.114
 server=/dddki.com/114.114.114.114
 server=/dddmmm.com/114.114.114.114
+server=/dddstew6cw8.fun/114.114.114.114
 server=/dddwan.com/114.114.114.114
 server=/dde-desktop.org/114.114.114.114
 server=/ddedush.com/114.114.114.114
