accelerated-domains: add gcddashb3.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32333,6 +32333,7 @@ server=/gcchina.com/114.114.114.114
 server=/gccmgw.com/114.114.114.114
 server=/gccrcw.com/114.114.114.114
 server=/gcdcrs.com/114.114.114.114
+server=/gcddashb3.fun/114.114.114.114
 server=/gcfprx.com/114.114.114.114
 server=/gcgd.net/114.114.114.114
 server=/gchao.com/114.114.114.114
