--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54702,6 +54702,7 @@ server=/lmdk01.com/114.114.114.114
 server=/lmdouble.com/114.114.114.114
 server=/lmeee.com/114.114.114.114
 server=/lmengcity.com/114.114.114.114
+server=/lmeurbnjs.com/114.114.114.114
 server=/lmf9.com/114.114.114.114
 server=/lmfdt.com/114.114.114.114
 server=/lmjd2.app/114.114.114.114
