accelerated-domains: add mstmsbz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59276,6 +59276,7 @@ server=/msstatic.com/114.114.114.114
 server=/mst-jc.com/114.114.114.114
 server=/mstatik.com/114.114.114.114
 server=/mstchina.com/114.114.114.114
+server=/mstmsbz.com/114.114.114.114
 server=/msudz.com/114.114.114.114
 server=/msunland.com/114.114.114.114
 server=/msw9.net/114.114.114.114
