accelerated-domains: add wujie.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85383,6 +85383,7 @@ server=/wujiangtong.com/114.114.114.114
 server=/wujiangzs.com/114.114.114.114
 server=/wujiayi.vip/114.114.114.114
 server=/wujidpj.com/114.114.114.114
+server=/wujie.net/114.114.114.114
 server=/wujiecaifu.com/114.114.114.114
 server=/wujiehd.com/114.114.114.114
 server=/wujiehuyu.com/114.114.114.114
