--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70420,6 +70420,7 @@ server=/sdewj.com/114.114.114.114
 server=/sdey.net/114.114.114.114
 server=/sdeyei-h.edu/114.114.114.114
 server=/sdfcxw.com/114.114.114.114
+server=/sdfey.com/114.114.114.114
 server=/sdffqaz.com/114.114.114.114
 server=/sdfhyl.com/114.114.114.114
 server=/sdfll.com/114.114.114.114
