--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76330,6 +76330,7 @@ server=/szsci.net/114.114.114.114
 server=/szscree.com/114.114.114.114
 server=/szsczb.com/114.114.114.114
 server=/szsczx.com/114.114.114.114
+server=/szsdjrmyy.com/114.114.114.114
 server=/szseafoodexpo.com/114.114.114.114
 server=/szseasons.com/114.114.114.114
 server=/szsfgc.com/114.114.114.114
