--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76017,6 +76017,7 @@ server=/szbeilu888.com/114.114.114.114
 server=/szbelle.com/114.114.114.114
 server=/szbiu.com/114.114.114.114
 server=/szbnrj.com/114.114.114.114
+server=/szboehospital.com/114.114.114.114
 server=/szboruien.com/114.114.114.114
 server=/szbosen.com/114.114.114.114
 server=/szboyoo.com/114.114.114.114
