--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70452,6 +70452,7 @@ server=/sdhbcl.com/114.114.114.114
 server=/sdhdssd.com/114.114.114.114
 server=/sdhfsh.com/114.114.114.114
 server=/sdhljykj.com/114.114.114.114
+server=/sdhmdp.com/114.114.114.114
 server=/sdhoukang.com/114.114.114.114
 server=/sdhsg.com/114.114.114.114
 server=/sdhsie.com/114.114.114.114
