--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39377,6 +39377,7 @@ server=/heitiane123.com/114.114.114.114
 server=/heitu.com/114.114.114.114
 server=/heitukeji.com/114.114.114.114
 server=/heiviek.com/114.114.114.114
+server=/heiwahospital.com/114.114.114.114
 server=/heiwangke.net/114.114.114.114
 server=/heixi.com/114.114.114.114
 server=/heiyan.com/114.114.114.114
