--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85930,6 +85930,7 @@ server=/wzqsyy120.com/114.114.114.114
 server=/wzrdwl2.com/114.114.114.114
 server=/wzright.com/114.114.114.114
 server=/wzrjsp.com/114.114.114.114
+server=/wzrm-hospital.com/114.114.114.114
 server=/wzrssip.com/114.114.114.114
 server=/wzsc123.com/114.114.114.114
 server=/wzsee.com/114.114.114.114
