accelerated-domains: add rxhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69475,6 +69475,7 @@ server=/rx-copper.com/114.114.114.114
 server=/rxbj.com/114.114.114.114
 server=/rxftw.com/114.114.114.114
 server=/rxgl.net/114.114.114.114
+server=/rxhospital.com/114.114.114.114
 server=/rxhui.com/114.114.114.114
 server=/rxhysm.com/114.114.114.114
 server=/rxian.com/114.114.114.114
