accelerated-domains: add szdxfsrhyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76071,6 +76071,7 @@ server=/szds.com/114.114.114.114
 server=/szdsit.com/114.114.114.114
 server=/szdunan.net/114.114.114.114
 server=/szdx189.com/114.114.114.114
+server=/szdxfsrhyy.com/114.114.114.114
 server=/szdxjf.com/114.114.114.114
 server=/szdy168.com/114.114.114.114
 server=/szdyx8.com/114.114.114.114
