accelerated-domains: add hxkq.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42887,6 +42887,7 @@ server=/hxjxsw.com/114.114.114.114
 server=/hxkba.com/114.114.114.114
 server=/hxkj.cc/114.114.114.114
 server=/hxkj.vip/114.114.114.114
+server=/hxkq.net/114.114.114.114
 server=/hxkq.org/114.114.114.114
 server=/hxkqyxzz.net/114.114.114.114
 server=/hxland.com/114.114.114.114
