accelerated-domains: add siad-c.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72892,6 +72892,7 @@ server=/shzyw.com/114.114.114.114
 server=/si-en.com/114.114.114.114
 server=/si-in.com/114.114.114.114
 server=/si9377.com/114.114.114.114
+server=/siad-c.com/114.114.114.114
 server=/siaedu.net/114.114.114.114
 server=/siaiyun.com/114.114.114.114
 server=/sialiagames.com.tw/114.114.114.114
