--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65860,6 +65860,7 @@ server=/qfang.com/114.114.114.114
 server=/qfangimg.com/114.114.114.114
 server=/qfbcs.com/114.114.114.114
 server=/qfbwcd.xyz/114.114.114.114
+server=/qfclo.com/114.114.114.114
 server=/qfedu.com/114.114.114.114
 server=/qfeiche.com/114.114.114.114
 server=/qfgolang.com/114.114.114.114
