accelerated-domains: add prime-care.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65137,6 +65137,7 @@ server=/prfc-cn.com/114.114.114.114
 server=/prfog.com/114.114.114.114
 server=/pricl.com/114.114.114.114
 server=/primarychina.com/114.114.114.114
+server=/prime-care.com/114.114.114.114
 server=/prime-semi.com/114.114.114.114
 server=/primerachina.com/114.114.114.114
 server=/primeton.com/114.114.114.114
