--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75965,6 +75965,7 @@ server=/sz-jiahong.com/114.114.114.114
 server=/sz-jlc.com/114.114.114.114
 server=/sz-kaito.com/114.114.114.114
 server=/sz-lcsc.com/114.114.114.114
+server=/sz-lzyy.com/114.114.114.114
 server=/sz-meicheng.com/114.114.114.114
 server=/sz-mtr.com/114.114.114.114
 server=/sz-news.com/114.114.114.114
