accelerated-domains: add ylxyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92184,6 +92184,7 @@ server=/ylxhy.com/114.114.114.114
 server=/ylxw.net/114.114.114.114
 server=/ylxweb.com/114.114.114.114
 server=/ylxyct.com/114.114.114.114
+server=/ylxyyy.com/114.114.114.114
 server=/ylxyzs.com/114.114.114.114
 server=/ylxzgz.com/114.114.114.114
 server=/ylydmt.com/114.114.114.114
