--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85509,6 +85509,7 @@ server=/wuweiqx.com/114.114.114.114
 server=/wuweiyou.com/114.114.114.114
 server=/wuwenjun.net/114.114.114.114
 server=/wuwuju.com/114.114.114.114
+server=/wuxi5h.com/114.114.114.114
 server=/wuxiairport.com/114.114.114.114
 server=/wuxianhaibao.com/114.114.114.114
 server=/wuxiantu.com/114.114.114.114
