--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85665,6 +85665,7 @@ server=/wx-youyan.net/114.114.114.114
 server=/wx.com/114.114.114.114
 server=/wx135.com/114.114.114.114
 server=/wx148.com/114.114.114.114
+server=/wx2h.com/114.114.114.114
 server=/wx2share.com/114.114.114.114
 server=/wx4.cc/114.114.114.114
 server=/wx8s.com/114.114.114.114
