--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85773,6 +85773,7 @@ server=/wxsohu.com/114.114.114.114
 server=/wxsteed.com/114.114.114.114
 server=/wxstztg.com/114.114.114.114
 server=/wxt2020.com/114.114.114.114
+server=/wxtcm.com/114.114.114.114
 server=/wxtczs.com/114.114.114.114
 server=/wxtdf.com/114.114.114.114
 server=/wxthe.com/114.114.114.114
