--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58176,6 +58176,7 @@ server=/mingcha.org/114.114.114.114
 server=/mingchaoonline.com/114.114.114.114
 server=/mingchaoyouxi.com/114.114.114.114
 server=/mingchatang.com/114.114.114.114
+server=/mingci.org/114.114.114.114
 server=/mingcloud.net/114.114.114.114
 server=/mingczh.com/114.114.114.114
 server=/mingdanwang.com/114.114.114.114
