accelerated-domains: add wuxi9h.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85511,6 +85511,7 @@ server=/wuweiyou.com/114.114.114.114
 server=/wuwenjun.net/114.114.114.114
 server=/wuwuju.com/114.114.114.114
 server=/wuxi5h.com/114.114.114.114
+server=/wuxi9h.com/114.114.114.114
 server=/wuxiairport.com/114.114.114.114
 server=/wuxianhaibao.com/114.114.114.114
 server=/wuxiantu.com/114.114.114.114
