accelerated-domains: add wx8h.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85670,6 +85670,7 @@ server=/wx148.com/114.114.114.114
 server=/wx2h.com/114.114.114.114
 server=/wx2share.com/114.114.114.114
 server=/wx4.cc/114.114.114.114
+server=/wx8h.com/114.114.114.114
 server=/wx8s.com/114.114.114.114
 server=/wx920.com/114.114.114.114
 server=/wx939.com/114.114.114.114
