--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85782,6 +85782,7 @@ server=/wxtdf.com/114.114.114.114
 server=/wxthe.com/114.114.114.114
 server=/wxtj10086.com/114.114.114.114
 server=/wxtpb.com/114.114.114.114
+server=/wxtrirh.com/114.114.114.114
 server=/wxtrust.com/114.114.114.114
 server=/wxutil.com/114.114.114.114
 server=/wxw120.com/114.114.114.114
