accelerated-domains: add hsqhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41543,6 +41543,7 @@ server=/hspfmz.com/114.114.114.114
 server=/hspm.net/114.114.114.114
 server=/hspress.net/114.114.114.114
 server=/hsqhfunds.com/114.114.114.114
+server=/hsqhospital.com/114.114.114.114
 server=/hsqjfw.com/114.114.114.114
 server=/hsqt888.com/114.114.114.114
 server=/hsrc.tv/114.114.114.114
