--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22031,6 +22031,7 @@ server=/coloros.net/114.114.114.114
 server=/colorv.com/114.114.114.114
 server=/coloryr.com/114.114.114.114
 server=/colourlife.com/114.114.114.114
+server=/columbia-wuxi.com/114.114.114.114
 server=/com.fi/114.114.114.114
 server=/com.tv/114.114.114.114
 server=/com4loves.com/114.114.114.114
