--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14222,6 +14222,7 @@ server=/bhovrath.com/114.114.114.114
 server=/bhpiano.com/114.114.114.114
 server=/bhpiston.com/114.114.114.114
 server=/bhqd6688.com/114.114.114.114
+server=/bhqzyy.com/114.114.114.114
 server=/bhrencai.com/114.114.114.114
 server=/bhrssp.com/114.114.114.114
 server=/bhsanfan.com/114.114.114.114
