--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85528,6 +85528,7 @@ server=/wuxijia.com/114.114.114.114
 server=/wuxijiekang.com/114.114.114.114
 server=/wuximarathon.com/114.114.114.114
 server=/wuximediaglobal.com/114.114.114.114
+server=/wuximhc.com/114.114.114.114
 server=/wuxin.info/114.114.114.114
 server=/wuxinban.com/114.114.114.114
 server=/wuxingmu.com/114.114.114.114
