--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85524,6 +85524,7 @@ server=/wuxiatools.com/114.114.114.114
 server=/wuxibus.com/114.114.114.114
 server=/wuxicxl.com/114.114.114.114
 server=/wuxihospital.com/114.114.114.114
+server=/wuxihqyy.com/114.114.114.114
 server=/wuxijia.com/114.114.114.114
 server=/wuxijiekang.com/114.114.114.114
 server=/wuximarathon.com/114.114.114.114
