accelerated-domains: add iwithu.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45951,6 +45951,7 @@ server=/iwin10.cc/114.114.114.114
 server=/iwin10.net/114.114.114.114
 server=/iwingchina.com/114.114.114.114
 server=/iwiscloud.com/114.114.114.114
+server=/iwithu.net/114.114.114.114
 server=/iwjw.com/114.114.114.114
 server=/iwmmob.com/114.114.114.114
 server=/iwncomm.com/114.114.114.114
