--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22032,6 +22032,7 @@ server=/coloros.net/114.114.114.114
 server=/colorv.com/114.114.114.114
 server=/coloryr.com/114.114.114.114
 server=/colourlife.com/114.114.114.114
+server=/columbia-china.com/114.114.114.114
 server=/columbia-wuxi.com/114.114.114.114
 server=/com.fi/114.114.114.114
 server=/com.tv/114.114.114.114
