--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31582,6 +31582,7 @@ server=/fusion.design/114.114.114.114
 server=/fusionappl.com/114.114.114.114
 server=/futa.eu/114.114.114.114
 server=/futaike.net/114.114.114.114
+server=/futang.org/114.114.114.114
 server=/fute.com/114.114.114.114
 server=/futianlvshi.com/114.114.114.114
 server=/futongquartz.com/114.114.114.114
