--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89179,6 +89179,7 @@ server=/xsyq.cc/114.114.114.114
 server=/xsyqmztg.com/114.114.114.114
 server=/xsyx.xyz/114.114.114.114
 server=/xsyxsc.com/114.114.114.114
+server=/xsyydtfy.com/114.114.114.114
 server=/xsyzdl.com/114.114.114.114
 server=/xszrcw.com/114.114.114.114
 server=/xszsw.com/114.114.114.114
