--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50267,6 +50267,7 @@ server=/kanfangjilu.com/114.114.114.114
 server=/kanfeidie.com/114.114.114.114
 server=/kang-zhuo.com/114.114.114.114
 server=/kang08.com/114.114.114.114
+server=/kang7.com/114.114.114.114
 server=/kangagws.com/114.114.114.114
 server=/kangame.tv/114.114.114.114
 server=/kangbaifoundation.com/114.114.114.114
