accelerated-domains: add zhuinw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96633,6 +96633,7 @@ server=/zhuiguangzhe.com/114.114.114.114
 server=/zhuihuodong.com/114.114.114.114
 server=/zhuimengzhu.com/114.114.114.114
 server=/zhuinianqing.com/114.114.114.114
+server=/zhuinw.com/114.114.114.114
 server=/zhuiqu.com/114.114.114.114
 server=/zhuishu.la/114.114.114.114
 server=/zhuishukan.com/114.114.114.114
