accelerated-domains: add lcyinsu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52900,6 +52900,7 @@ server=/lcycgg.com/114.114.114.114
 server=/lcyff.com/114.114.114.114
 server=/lcyhdl.com/114.114.114.114
 server=/lcyidc.com/114.114.114.114
+server=/lcyinsu.com/114.114.114.114
 server=/lcykgg.com/114.114.114.114
 server=/lcyp.net/114.114.114.114
 server=/lcyrny.com/114.114.114.114
