--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55926,6 +55926,7 @@ server=/lygrffw.com/114.114.114.114
 server=/lygrtm.com/114.114.114.114
 server=/lygscjs.com/114.114.114.114
 server=/lygtravel.com/114.114.114.114
+server=/lygyyjt.com/114.114.114.114
 server=/lyh8888.com/114.114.114.114
 server=/lyhb88.com/114.114.114.114
 server=/lyhendry.com/114.114.114.114
