--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55917,6 +55917,7 @@ server=/lyg800.com/114.114.114.114
 server=/lygcsyy.com/114.114.114.114
 server=/lygdfrcb.com/114.114.114.114
 server=/lygfdc.com/114.114.114.114
+server=/lygfybj.com/114.114.114.114
 server=/lyggm.com/114.114.114.114
 server=/lyghi.com/114.114.114.114
 server=/lygjdf.com/114.114.114.114
