accelerated-domains: add clearofchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20666,6 +20666,7 @@ server=/clearaki.com/114.114.114.114
 server=/clearcrane.com/114.114.114.114
 server=/cleargrass.com/114.114.114.114
 server=/clearmediatech.com/114.114.114.114
+server=/clearofchina.com/114.114.114.114
 server=/clearsky360.com/114.114.114.114
 server=/clegend-films.com/114.114.114.114
 server=/clevercn.net/114.114.114.114
