accelerated-domains: add lygjtkgjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55922,6 +55922,7 @@ server=/lygfybj.com/114.114.114.114
 server=/lyggm.com/114.114.114.114
 server=/lyghi.com/114.114.114.114
 server=/lygjdf.com/114.114.114.114
+server=/lygjtkgjt.com/114.114.114.114
 server=/lygmedia.com/114.114.114.114
 server=/lygnews.com/114.114.114.114
 server=/lygou.cc/114.114.114.114
