accelerated-domains: add jsnydefy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49065,6 +49065,7 @@ server=/jsnovel.com/114.114.114.114
 server=/jsntzsgs.com/114.114.114.114
 server=/jsnx.net/114.114.114.114
 server=/jsnxs.com/114.114.114.114
+server=/jsnydefy.com/114.114.114.114
 server=/jsnydsfy.com/114.114.114.114
 server=/jsocr.com/114.114.114.114
 server=/json.icu/114.114.114.114
