--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61345,6 +61345,7 @@ server=/njxzwh.com/114.114.114.114
 server=/njycwy.com/114.114.114.114
 server=/njyfpca.org/114.114.114.114
 server=/njyhznkj.com/114.114.114.114
+server=/njyjglxh.com/114.114.114.114
 server=/njyjxh.com/114.114.114.114
 server=/njyouwin.com/114.114.114.114
 server=/njyshb.com/114.114.114.114
