--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62476,6 +62476,7 @@ server=/obsapp.net/114.114.114.114
 server=/obsbot.com/114.114.114.114
 server=/obsworks.com/114.114.114.114
 server=/obyee.com/114.114.114.114
+server=/ocamar.com/114.114.114.114
 server=/ocar.tv/114.114.114.114
 server=/ocd120.com/114.114.114.114
 server=/oceanbase.com/114.114.114.114
