accelerated-domains: add gaoxiaozp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32247,6 +32247,7 @@ server=/gaotuxueyuan.com/114.114.114.114
 server=/gaowoip.com/114.114.114.114
 server=/gaoxiaobang.com/114.114.114.114
 server=/gaoxiaojob.com/114.114.114.114
+server=/gaoxiaozp.com/114.114.114.114
 server=/gaoxin123.com/114.114.114.114
 server=/gaoxincarbon.com/114.114.114.114
 server=/gaoxinedu.net/114.114.114.114
