--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49081,6 +49081,7 @@ server=/jspetro.com/114.114.114.114
 server=/jsph.net/114.114.114.114
 server=/jsphp.net/114.114.114.114
 server=/jsplayground.net/114.114.114.114
+server=/jspoh.com/114.114.114.114
 server=/jspp.com/114.114.114.114
 server=/jspxcms.com/114.114.114.114
 server=/jsq886.com/114.114.114.114
