accelerated-domains: add o-hr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62397,6 +62397,7 @@ server=/nzw6.com/114.114.114.114
 server=/nzwgs.com/114.114.114.114
 server=/nzydzsw.com/114.114.114.114
 server=/o--o.win/114.114.114.114
+server=/o-hr.com/114.114.114.114
 server=/o-netcom.com/114.114.114.114
 server=/o-star.cc/114.114.114.114
 server=/o0-2.com/114.114.114.114
