accelerated-domains: add gyqrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37301,6 +37301,7 @@ server=/gypserver.com/114.114.114.114
 server=/gypzkat.com/114.114.114.114
 server=/gyqcw.com/114.114.114.114
 server=/gyqqd.com/114.114.114.114
+server=/gyqrmyy.com/114.114.114.114
 server=/gyqzby.com/114.114.114.114
 server=/gyr.cc/114.114.114.114
 server=/gyrsy.com/114.114.114.114
