accelerated-domains: add czey.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23499,6 +23499,7 @@ server=/czduxinban.com/114.114.114.114
 server=/czech-visacenter.com/114.114.114.114
 server=/czedu.com/114.114.114.114
 server=/czepb.com/114.114.114.114
+server=/czey.com/114.114.114.114
 server=/czfcdp.com/114.114.114.114
 server=/czfcw.com/114.114.114.114
 server=/czfdc.com/114.114.114.114
