accelerated-domains: add zyjhzyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98472,6 +98472,7 @@ server=/zyip.com/114.114.114.114
 server=/zyixi.xyz/114.114.114.114
 server=/zyixinx.com/114.114.114.114
 server=/zyiz.net/114.114.114.114
+server=/zyjhzyy.com/114.114.114.114
 server=/zyjiajiao.com/114.114.114.114
 server=/zyjiajuw.com/114.114.114.114
 server=/zyjoygame.com/114.114.114.114
