accelerated-domains: add hz7hospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43121,6 +43121,7 @@ server=/hz-zjsh.com/114.114.114.114
 server=/hz3ds.com/114.114.114.114
 server=/hz66.com/114.114.114.114
 server=/hz6z.com/114.114.114.114
+server=/hz7hospital.com/114.114.114.114
 server=/hz8z.net/114.114.114.114
 server=/hzaee.com/114.114.114.114
 server=/hzaiguojiang.com/114.114.114.114
