accelerated-domains: add hz9hospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43123,6 +43123,7 @@ server=/hz66.com/114.114.114.114
 server=/hz6z.com/114.114.114.114
 server=/hz7hospital.com/114.114.114.114
 server=/hz8z.net/114.114.114.114
+server=/hz9hospital.com/114.114.114.114
 server=/hzaee.com/114.114.114.114
 server=/hzaiguojiang.com/114.114.114.114
 server=/hzairport.com/114.114.114.114
