accelerated-domains: add mshchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59277,6 +59277,7 @@ server=/mshandong.com/114.114.114.114
 server=/mshao.com/114.114.114.114
 server=/mshare.cc/114.114.114.114
 server=/mshareservices.com/114.114.114.114
+server=/mshchina.com/114.114.114.114
 server=/mshg2019.com/114.114.114.114
 server=/mshishang.com/114.114.114.114
 server=/mshot.com/114.114.114.114
