accelerated-domains: add nbshzwyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60366,6 +60366,7 @@ server=/nbrj.com/114.114.114.114
 server=/nbrlzy.com/114.114.114.114
 server=/nbsason.com/114.114.114.114
 server=/nbshuoxue.com/114.114.114.114
+server=/nbshzwyy.com/114.114.114.114
 server=/nbsp99.com/114.114.114.114
 server=/nbsqbank.com/114.114.114.114
 server=/nbstbz.com/114.114.114.114
