--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97274,6 +97274,7 @@ server=/zjqinzijianding.com/114.114.114.114
 server=/zjqjs.com/114.114.114.114
 server=/zjqqmy.com/114.114.114.114
 server=/zjqzsy.com/114.114.114.114
+server=/zjradiology.org/114.114.114.114
 server=/zjrc.com/114.114.114.114
 server=/zjrc.net/114.114.114.114
 server=/zjrcu.com/114.114.114.114
