accelerated-domains: add weja-hospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83514,6 +83514,7 @@ server=/weizhuangfu.com/114.114.114.114
 server=/weizhuanji.com/114.114.114.114
 server=/weizoom.com/114.114.114.114
 server=/weizunkj.com/114.114.114.114
+server=/weja-hospital.com/114.114.114.114
 server=/wejianzhan.com/114.114.114.114
 server=/wejias.com/114.114.114.114
 server=/wejizan.com/114.114.114.114
