--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23062,6 +23062,7 @@ server=/ctnz.net/114.114.114.114
 server=/ctobsnssdk.com/114.114.114.114
 server=/ctocio.com/114.114.114.114
 server=/ctoclub.com/114.114.114.114
+server=/ctongonline.com/114.114.114.114
 server=/ctoutiao.com/114.114.114.114
 server=/ctpdd.com/114.114.114.114
 server=/ctqcw.com/114.114.114.114
