accelerated-domains: add nbamyl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60309,6 +60309,7 @@ server=/nbahero.com/114.114.114.114
 server=/nbahi.com/114.114.114.114
 server=/nbaidai.com/114.114.114.114
 server=/nball.cc/114.114.114.114
+server=/nbamyl.com/114.114.114.114
 server=/nbaoke.com/114.114.114.114
 server=/nbappliance.com/114.114.114.114
 server=/nbaqmq.com/114.114.114.114
