--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43190,6 +43190,7 @@ server=/hzfeiyao.com/114.114.114.114
 server=/hzfolo.com/114.114.114.114
 server=/hzfpay.com/114.114.114.114
 server=/hzfucai.net/114.114.114.114
+server=/hzfuturehos.com/114.114.114.114
 server=/hzgangdun.com/114.114.114.114
 server=/hzgh.org/114.114.114.114
 server=/hzgjj.com/114.114.114.114
