--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43341,6 +43341,7 @@ server=/hzxuhong.com/114.114.114.114
 server=/hzxy888.com/114.114.114.114
 server=/hzxyns.com/114.114.114.114
 server=/hzxywlkj.com/114.114.114.114
+server=/hzyanglao.com/114.114.114.114
 server=/hzyestar.com/114.114.114.114
 server=/hzyhzp.com/114.114.114.114
 server=/hzyidc.com/114.114.114.114
