--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43276,6 +43276,7 @@ server=/hzpgc.com/114.114.114.114
 server=/hzpzs.net/114.114.114.114
 server=/hzqfy.com/114.114.114.114
 server=/hzqiuxue.com/114.114.114.114
+server=/hzqj.com/114.114.114.114
 server=/hzqjdz.net/114.114.114.114
 server=/hzqlpt.com/114.114.114.114
 server=/hzqx.com/114.114.114.114
