accelerated-domains: add hzbomed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43144,6 +43144,7 @@ server=/hzbianqu.com/114.114.114.114
 server=/hzbike.com/114.114.114.114
 server=/hzbk.net/114.114.114.114
 server=/hzbohai.com/114.114.114.114
+server=/hzbomed.com/114.114.114.114
 server=/hzbook.com/114.114.114.114
 server=/hzboxing.com/114.114.114.114
 server=/hzboxuan.com/114.114.114.114
