accelerated-domains: add hzzxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43371,6 +43371,7 @@ server=/hzzsfs.com/114.114.114.114
 server=/hzztkj.com/114.114.114.114
 server=/hzzuyin.com/114.114.114.114
 server=/hzzx365.com/114.114.114.114
+server=/hzzxyy.com/114.114.114.114
 server=/i-27.name/114.114.114.114
 server=/i-520.net/114.114.114.114
 server=/i-bei.com/114.114.114.114
