--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45604,6 +45604,7 @@ server=/isudaji.com/114.114.114.114
 server=/isuike.com/114.114.114.114
 server=/isummi.com/114.114.114.114
 server=/isun.org/114.114.114.114
+server=/isunon.com/114.114.114.114
 server=/isurecloud.net/114.114.114.114
 server=/isuzhou.me/114.114.114.114
 server=/isvee.com/114.114.114.114
