--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46816,6 +46816,7 @@ server=/jhonse.com/114.114.114.114
 server=/jhotel-shanghai.com/114.114.114.114
 server=/jhqshfly.com/114.114.114.114
 server=/jhrcbank.com/114.114.114.114
+server=/jhsairport.com/114.114.114.114
 server=/jhscm.com/114.114.114.114
 server=/jhscrm.com/114.114.114.114
 server=/jhsddjd.com/114.114.114.114
