--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97295,6 +97295,7 @@ server=/zjrcu.com/114.114.114.114
 server=/zjriji.com/114.114.114.114
 server=/zjrtv.vip/114.114.114.114
 server=/zjrugao.com/114.114.114.114
+server=/zjsairport.com/114.114.114.114
 server=/zjsaisi.com/114.114.114.114
 server=/zjsanma.com/114.114.114.114
 server=/zjscdb.com/114.114.114.114
