--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19474,6 +19474,7 @@ server=/chinainsbrokers.com/114.114.114.114
 server=/chinaiol.com/114.114.114.114
 server=/chinaiprlaw.com/114.114.114.114
 server=/chinairn.com/114.114.114.114
+server=/chinairport.net/114.114.114.114
 server=/chinairr.org/114.114.114.114
 server=/chinait.vip/114.114.114.114
 server=/chinaitcapital.com/114.114.114.114
