accelerated-domains: add dingdingtingche.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25490,6 +25490,7 @@ server=/dingding.xin/114.114.114.114
 server=/dingdingdan.com/114.114.114.114
 server=/dingdingdoctor.com/114.114.114.114
 server=/dingdingkaike.com/114.114.114.114
+server=/dingdingtingche.com/114.114.114.114
 server=/dingdone.com/114.114.114.114
 server=/dingdongcloud.com/114.114.114.114
 server=/dingdongebusiness.com/114.114.114.114
