--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94370,6 +94370,7 @@ server=/yxpms.com/114.114.114.114
 server=/yxptfs.com/114.114.114.114
 server=/yxqiche.com/114.114.114.114
 server=/yxrb.net/114.114.114.114
+server=/yxrj.com/114.114.114.114
 server=/yxsc33.com/114.114.114.114
 server=/yxsea.com/114.114.114.114
 server=/yxsj.net/114.114.114.114
