--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76710,6 +76710,7 @@ server=/taiyangd.com/114.114.114.114
 server=/taiyanghttp.com/114.114.114.114
 server=/taiyin117.com/114.114.114.114
 server=/taiyiplus.com/114.114.114.114
+server=/taiyocablecn.com/114.114.114.114
 server=/taiyou.fund/114.114.114.114
 server=/taiyuanguanye.com/114.114.114.114
 server=/taiyulink.com/114.114.114.114
