--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16982,6 +16982,7 @@ server=/camilliar.com/114.114.114.114
 server=/camnpr.com/114.114.114.114
 server=/camoryapps.com/114.114.114.114
 server=/campanilechina.com/114.114.114.114
+server=/campari1987.com/114.114.114.114
 server=/campbicycle.com/114.114.114.114
 server=/campingcn.com/114.114.114.114
 server=/campus-app.net/114.114.114.114
