--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46655,6 +46655,7 @@ server=/jeeyaa.com/114.114.114.114
 server=/jeffdingzone.com/114.114.114.114
 server=/jeffjade.com/114.114.114.114
 server=/jeffreyitstudio.com/114.114.114.114
+server=/jeflon.com/114.114.114.114
 server=/jegotrip.com/114.114.114.114
 server=/jehudf.com/114.114.114.114
 server=/jelleybrown.com/114.114.114.114
