accelerated-domains: add lonyon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55051,6 +55051,7 @@ server=/lonlife.org/114.114.114.114
 server=/lonmedcn.com/114.114.114.114
 server=/lontengsteel.com/114.114.114.114
 server=/lontiumsemi.com/114.114.114.114
+server=/lonyon.com/114.114.114.114
 server=/loocall.com/114.114.114.114
 server=/loocode.com/114.114.114.114
 server=/loodd.com/114.114.114.114
