--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97114,6 +97114,7 @@ server=/zizzs.com/114.114.114.114
 server=/zj-art.com/114.114.114.114
 server=/zj-guojun.com/114.114.114.114
 server=/zj-idc.com/114.114.114.114
+server=/zj-innolight.com/114.114.114.114
 server=/zj-nuolong.com/114.114.114.114
 server=/zj.com/114.114.114.114
 server=/zj01.com/114.114.114.114
