--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15905,6 +15905,7 @@ server=/bridge-image.com/114.114.114.114
 server=/bridgee.net/114.114.114.114
 server=/bridgelawfirm.com/114.114.114.114
 server=/brighost.com/114.114.114.114
+server=/bright-gene.com/114.114.114.114
 server=/bright-trend.com/114.114.114.114
 server=/brightdairy.com/114.114.114.114
 server=/brightdecolighting.com/114.114.114.114
