accelerated-domains: add icnano-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43810,6 +43810,7 @@ server=/icmomo.com/114.114.114.114
 server=/icmp.link/114.114.114.114
 server=/icmsdev.com/114.114.114.114
 server=/icnal.com/114.114.114.114
+server=/icnano-tech.com/114.114.114.114
 server=/icncpc.com/114.114.114.114
 server=/icnjob.com/114.114.114.114
 server=/icnkr.com/114.114.114.114
