accelerated-domains: add sinoinnovel.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73205,6 +73205,7 @@ server=/sinohydro.com/114.114.114.114
 server=/sinoid.com/114.114.114.114
 server=/sinoinfosec.com/114.114.114.114
 server=/sinoing.net/114.114.114.114
+server=/sinoinnovel.com/114.114.114.114
 server=/sinoins.com/114.114.114.114
 server=/sinointeractive.com/114.114.114.114
 server=/sinokap.com/114.114.114.114
