--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93173,6 +93173,7 @@ server=/yrdart.com/114.114.114.114
 server=/yrhct.com/114.114.114.114
 server=/yrhjy.com/114.114.114.114
 server=/yrmpay.com/114.114.114.114
+server=/yrobot.com/114.114.114.114
 server=/yrom.net/114.114.114.114
 server=/yrsm.net/114.114.114.114
 server=/yrtgame.com/114.114.114.114
