--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22047,6 +22047,7 @@ server=/com.tv/114.114.114.114
 server=/com4loves.com/114.114.114.114
 server=/comac.cc/114.114.114.114
 server=/comake.online/114.114.114.114
+server=/combiosz.com/114.114.114.114
 server=/combocn.com/114.114.114.114
 server=/combofin.com/114.114.114.114
 server=/combomen.com/114.114.114.114
