accelerated-domains: add cony-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22139,6 +22139,7 @@ server=/conuo.com/114.114.114.114
 server=/convergemob.com/114.114.114.114
 server=/convertermkv.com/114.114.114.114
 server=/convertlab.com/114.114.114.114
+server=/cony-tech.com/114.114.114.114
 server=/conyedit.com/114.114.114.114
 server=/conyli.cc/114.114.114.114
 server=/coo1read.com/114.114.114.114
