accelerated-domains: add poration-vac-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64963,6 +64963,7 @@ server=/popumed.com/114.114.114.114
 server=/popupgrade.com/114.114.114.114
 server=/poputar.com/114.114.114.114
 server=/popziti.com/114.114.114.114
+server=/poration-vac-tech.com/114.114.114.114
 server=/porlockz.com/114.114.114.114
 server=/porquesifiestas.com/114.114.114.114
 server=/portalcdn.cdnetworks.com/114.114.114.114
