--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72975,6 +72975,7 @@ server=/sichuanyunzhan.com/114.114.114.114
 server=/sichw.com/114.114.114.114
 server=/sicimano.com/114.114.114.114
 server=/sicoll.com/114.114.114.114
+server=/sicosemi.com/114.114.114.114
 server=/sicuo.com/114.114.114.114
 server=/siengine.com/114.114.114.114
 server=/sieredu.com/114.114.114.114
