accelerated-domains: add szgwin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76182,6 +76182,7 @@ server=/szgla.com/114.114.114.114
 server=/szglsf.com/114.114.114.114
 server=/szguanai.com/114.114.114.114
 server=/szguante.com/114.114.114.114
+server=/szgwin.com/114.114.114.114
 server=/szgwsd.com/114.114.114.114
 server=/szgymz.com/114.114.114.114
 server=/szgztg.com/114.114.114.114
