accelerated-domains: add robotech-log.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68955,6 +68955,7 @@ server=/roborock.com/114.114.114.114
 server=/robosense.ai/114.114.114.114
 server=/robot-ai.org/114.114.114.114
 server=/robot-china.com/114.114.114.114
+server=/robotech-log.com/114.114.114.114
 server=/robotkang.cc/114.114.114.114
 server=/robotphoenix.com/114.114.114.114
 server=/robotplaces.com/114.114.114.114
