accelerated-domains: add auto-ekontrol.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12127,6 +12127,7 @@ server=/authing.co/114.114.114.114
 server=/authing.com/114.114.114.114
 server=/autismjumpstart.org/114.114.114.114
 server=/auto-ccpit.org/114.114.114.114
+server=/auto-ekontrol.com/114.114.114.114
 server=/auto-learning.com/114.114.114.114
 server=/auto-made.com/114.114.114.114
 server=/auto-mooc.com/114.114.114.114
