accelerated-domains: add lindmik.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53975,6 +53975,7 @@ server=/linbaoshuwu.com/114.114.114.114
 server=/linchangyu.com/114.114.114.114
 server=/lincoc.com/114.114.114.114
 server=/lindapatent.com/114.114.114.114
+server=/lindmik.com/114.114.114.114
 server=/lindunshu.com/114.114.114.114
 server=/lindybag.com/114.114.114.114
 server=/line-gate.com/114.114.114.114
