accelerated-domains: add lisure.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54326,6 +54326,7 @@ server=/listentoworld.com/114.114.114.114
 server=/listenvod.com/114.114.114.114
 server=/listong.com/114.114.114.114
 server=/lisu.me/114.114.114.114
+server=/lisure.com/114.114.114.114
 server=/lisz.me/114.114.114.114
 server=/litaizs.com/114.114.114.114
 server=/litangkj.com/114.114.114.114
