accelerated-domains: add goodeeis.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33976,6 +33976,7 @@ server=/gooddr.com/114.114.114.114
 server=/gooddu.com/114.114.114.114
 server=/goode-china.com/114.114.114.114
 server=/goodealwigs.com/114.114.114.114
+server=/goodeeis.com/114.114.114.114
 server=/goodera8.com/114.114.114.114
 server=/goodesocket.com/114.114.114.114
 server=/goodgongshi.com/114.114.114.114
