accelerated-domains: add excellbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29207,6 +29207,7 @@ server=/excel8.com/114.114.114.114
 server=/excel880.com/114.114.114.114
 server=/excelcn.com/114.114.114.114
 server=/excelhome.net/114.114.114.114
+server=/excellbio.com/114.114.114.114
 server=/excellenceads.com/114.114.114.114
 server=/excelpx.com/114.114.114.114
 server=/exchen.net/114.114.114.114
