accelerated-domains: add szbojay.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76101,6 +76101,7 @@ server=/szbelle.com/114.114.114.114
 server=/szbiu.com/114.114.114.114
 server=/szbnrj.com/114.114.114.114
 server=/szboehospital.com/114.114.114.114
+server=/szbojay.com/114.114.114.114
 server=/szboruien.com/114.114.114.114
 server=/szbosen.com/114.114.114.114
 server=/szboyoo.com/114.114.114.114
