accelerated-domains: add maxonesemi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57007,6 +57007,7 @@ server=/maxket.com/114.114.114.114
 server=/maxlu.net/114.114.114.114
 server=/maxng.cc/114.114.114.114
 server=/maxok.com/114.114.114.114
+server=/maxonesemi.com/114.114.114.114
 server=/maxonesoft.com/114.114.114.114
 server=/maxowen.com/114.114.114.114
 server=/maxpda.com/114.114.114.114
