accelerated-domains: add neomodulus.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60580,6 +60580,7 @@ server=/neohytung.com/114.114.114.114
 server=/neojos.com/114.114.114.114
 server=/neolee.com/114.114.114.114
 server=/neolix.net/114.114.114.114
+server=/neomodulus.com/114.114.114.114
 server=/neoremind.com/114.114.114.114
 server=/neosey.com/114.114.114.114
 server=/neoyon.com/114.114.114.114
