accelerated-domains: add secote.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70791,6 +70791,7 @@ server=/seclover.com/114.114.114.114
 server=/secoo.com/114.114.114.114
 server=/secooart.com/114.114.114.114
 server=/secooimg.com/114.114.114.114
+server=/secote.com/114.114.114.114
 server=/secpulse.com/114.114.114.114
 server=/secretflow.com/114.114.114.114
 server=/secretgardenresorts.com/114.114.114.114
