accelerated-domains: add changingtek.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18491,6 +18491,7 @@ server=/changhu12333.com/114.114.114.114
 server=/changhualaw.com/114.114.114.114
 server=/changhuist.com/114.114.114.114
 server=/changingie.com/114.114.114.114
+server=/changingtek.com/114.114.114.114
 server=/changjiangdata.com/114.114.114.114
 server=/changjiangjin.com/114.114.114.114
 server=/changjiangtimes.com/114.114.114.114
